--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,9 +23,12 @@ jobs:
       with:
         java-version: 11
         distribution: adopt
+        
+    - name: Setup Kotlin
+      uses: fwilhe2/setup-kotlin@0.2.0
 
     - name: Gradle Build Action
-      uses: gradle/gradle-build-action@v2.3.
+      uses: gradle/gradle-build-action@v2.3.2
 
     - name: Create Release
       if: startsWith(github.ref, 'refs/tags/') && github.repository == 'EnergoStlin/OsuProfile'
