--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -31,9 +31,9 @@ jobs:
       run: chmod +x ./gradlew
 
     - name: Build app
-      uses: gradle/gradle-command-action@v2
+      uses: gradle/gradle-build-action@v2.3.2
       with:
-        arguments: build
+        arguments: assemble
       
     - name: Clean up build artifact
       run: |
