--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -37,6 +37,8 @@ jobs:
       
     - name: Clean up build artifact
       run: |
+        pwd
+        ls
         set -e
         mv /home/runner/work/OsuProfile/OsuProfile/build/apk/app-release-unsigned.apk OsuProfile.apk
 
