--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -37,10 +37,9 @@ jobs:
       
     - name: Clean up build artifact
       run: |
-        pwd
-        ls
+        ls build/apk
         set -e
-        mv /home/runner/work/OsuProfile/OsuProfile/build/apk/app-release-unsigned.apk OsuProfile.apk
+        mv build/apk/app-release-unsigned.apk OsuProfile.apk
 
     - name: Create Release
       uses: softprops/action-gh-release@v1
